--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,8 +139,16 @@
     "    contrast = graycoprops(glcm, 'contrast')[0, 0]\n",
     "    return contrast\n",
     "\n",
+    "def calculate_shininess(image):\n",
+    "    \"\"\"Calculate the shininess of the image based on bright pixels.\"\"\"\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    bright_pixels = np.sum(gray_image > 220)  # Count pixels with intensity greater than 220\n",
+    "    total_pixels = image.shape[0] * image.shape[1]\n",
+    "    shininess = bright_pixels / total_pixels  # Proportion of bright pixels\n",
+    "    return shininess\n",
+    "\n",
     "def get_features(image):\n",
-    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections, transparency, texture smoothness) from the image.\"\"\"\n",
+    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections, transparency, texture smoothness, shininess).\"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
     "    parallel_lines = calculate_parallel_lines(image)\n",
@@ -148,19 +156,20 @@
     "    reflection_amount = calculate_reflection(image)\n",
     "    transparency_amount = calculate_transparency(image)\n",
     "    texture_smoothness = calculate_texture_smoothness(image)\n",
-    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness"
+    "    shininess = calculate_shininess(image)  # Added shininess feature\n",
+    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness, shininess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636))\n"
+      "(15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778))\n"
      ]
     }
    ],
@@ -179,35 +188,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5553447185325743\n",
+      "(15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778))\n",
+      "Accuracy: 0.5825426944971537\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     battery       0.62      0.54      0.58       145\n",
-      "  biological       0.51      0.64      0.57       138\n",
-      "   cardboard       0.67      0.54      0.60       311\n",
-      "     clothes       0.63      0.90      0.74       886\n",
-      "       glass       0.44      0.49      0.46       455\n",
-      "       metal       0.35      0.13      0.19       163\n",
-      "       paper       0.51      0.34      0.41       263\n",
-      "     plastic       0.48      0.31      0.37       327\n",
-      "       shoes       0.47      0.41      0.44       317\n",
-      "       trash       0.48      0.38      0.42       157\n",
+      "     battery       0.67      0.59      0.63       145\n",
+      "  biological       0.52      0.63      0.57       138\n",
+      "   cardboard       0.66      0.56      0.61       311\n",
+      "     clothes       0.66      0.93      0.78       886\n",
+      "       glass       0.45      0.51      0.48       455\n",
+      "       metal       0.33      0.10      0.15       163\n",
+      "       paper       0.57      0.39      0.46       263\n",
+      "     plastic       0.53      0.33      0.41       327\n",
+      "       shoes       0.50      0.44      0.47       317\n",
+      "       trash       0.55      0.43      0.48       157\n",
       "\n",
-      "    accuracy                           0.56      3162\n",
-      "   macro avg       0.52      0.47      0.48      3162\n",
-      "weighted avg       0.54      0.56      0.53      3162\n",
+      "    accuracy                           0.58      3162\n",
+      "   macro avg       0.54      0.49      0.50      3162\n",
+      "weighted avg       0.57      0.58      0.56      3162\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Example feature extraction\n",
+    "test_im = cv2.imread(path + \"/garbage-dataset/cardboard/cardboard_25.jpg\")\n",
+    "print(get_features(test_im))\n",
+    "\n",
     "# Initialize lists to hold features and labels\n",
     "features = []\n",
     "labels = []\n",
@@ -227,8 +241,8 @@
     "        image = cv2.imread(image_path)\n",
     "\n",
     "        if image is not None:\n",
-    "            yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness = get_features(image)\n",
-    "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness])\n",
+    "            features_list = get_features(image)\n",
+    "            features.append(features_list)\n",
     "            labels.append(class_name)\n",
     "\n",
     "    # Collect test images for manual testing\n",
@@ -236,11 +250,11 @@
     "        test_images.append(os.path.join(class_path, image_name))\n",
     "\n",
     "# Convert features and labels to a DataFrame\n",
-    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount', 'texture_smoothness'])\n",
+    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount', 'texture_smoothness', 'shininess'])\n",
     "df['label'] = labels\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
-    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount', 'texture_smoothness']]\n",
+    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount', 'texture_smoothness', 'shininess']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -259,8 +273,8 @@
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
-    "        yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness = get_features(image)\n",
-    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness]])\n",
+    "        features_list = get_features(image)\n",
+    "        feature = np.array([features_list])  # Convert to 2D array for prediction\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
@@ -269,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -297,113 +311,112 @@
      "text": [
       "Predicted class counts for test images containing trash:\n",
       "Class: metal, Count: 3\n",
-      "Class: trash, Count: 72\n",
-      "Class: plastic, Count: 11\n",
-      "Class: battery, Count: 4\n",
-      "Class: shoes, Count: 13\n",
-      "Class: glass, Count: 46\n",
-      "Class: paper, Count: 5\n",
+      "Class: trash, Count: 84\n",
+      "Class: clothes, Count: 21\n",
+      "Class: plastic, Count: 6\n",
+      "Class: shoes, Count: 12\n",
+      "Class: paper, Count: 6\n",
+      "Class: glass, Count: 38\n",
       "Class: cardboard, Count: 13\n",
-      "Class: clothes, Count: 18\n",
+      "Class: battery, Count: 2\n",
       "Class: biological, Count: 5\n",
       "Predicted class counts for test images containing glass:\n",
-      "Class: glass, Count: 301\n",
-      "Class: shoes, Count: 68\n",
-      "Class: trash, Count: 21\n",
-      "Class: clothes, Count: 97\n",
-      "Class: plastic, Count: 36\n",
-      "Class: metal, Count: 16\n",
-      "Class: cardboard, Count: 15\n",
-      "Class: biological, Count: 23\n",
-      "Class: paper, Count: 15\n",
-      "Class: battery, Count: 21\n",
+      "Class: glass, Count: 303\n",
+      "Class: trash, Count: 19\n",
+      "Class: metal, Count: 10\n",
+      "Class: plastic, Count: 46\n",
+      "Class: shoes, Count: 64\n",
+      "Class: clothes, Count: 96\n",
+      "Class: battery, Count: 18\n",
+      "Class: cardboard, Count: 13\n",
+      "Class: biological, Count: 26\n",
+      "Class: paper, Count: 18\n",
       "Predicted class counts for test images containing battery:\n",
-      "Class: shoes, Count: 31\n",
-      "Class: glass, Count: 33\n",
-      "Class: battery, Count: 104\n",
-      "Class: biological, Count: 7\n",
-      "Class: trash, Count: 1\n",
-      "Class: cardboard, Count: 3\n",
-      "Class: clothes, Count: 7\n",
-      "Class: paper, Count: 2\n",
+      "Class: shoes, Count: 28\n",
+      "Class: glass, Count: 35\n",
+      "Class: battery, Count: 109\n",
+      "Class: biological, Count: 6\n",
+      "Class: paper, Count: 1\n",
+      "Class: clothes, Count: 6\n",
+      "Class: plastic, Count: 1\n",
+      "Class: cardboard, Count: 2\n",
       "Class: metal, Count: 1\n",
       "Predicted class counts for test images containing clothes:\n",
-      "Class: clothes, Count: 959\n",
-      "Class: paper, Count: 15\n",
-      "Class: battery, Count: 4\n",
-      "Class: metal, Count: 8\n",
-      "Class: plastic, Count: 13\n",
-      "Class: shoes, Count: 3\n",
-      "Class: biological, Count: 14\n",
-      "Class: glass, Count: 34\n",
-      "Class: trash, Count: 2\n",
-      "Class: cardboard, Count: 14\n",
-      "Predicted class counts for test images containing metal:\n",
-      "Class: clothes, Count: 52\n",
-      "Class: glass, Count: 38\n",
-      "Class: metal, Count: 42\n",
-      "Class: shoes, Count: 26\n",
-      "Class: biological, Count: 14\n",
-      "Class: plastic, Count: 13\n",
-      "Class: cardboard, Count: 7\n",
-      "Class: paper, Count: 4\n",
-      "Class: trash, Count: 4\n",
-      "Class: battery, Count: 4\n",
-      "Predicted class counts for test images containing plastic:\n",
-      "Class: plastic, Count: 122\n",
-      "Class: cardboard, Count: 29\n",
-      "Class: clothes, Count: 125\n",
-      "Class: paper, Count: 22\n",
-      "Class: trash, Count: 16\n",
-      "Class: battery, Count: 3\n",
-      "Class: glass, Count: 55\n",
-      "Class: shoes, Count: 12\n",
-      "Class: metal, Count: 6\n",
-      "Class: biological, Count: 7\n",
-      "Predicted class counts for test images containing cardboard:\n",
-      "Class: cardboard, Count: 198\n",
-      "Class: clothes, Count: 64\n",
-      "Class: glass, Count: 34\n",
-      "Class: trash, Count: 4\n",
-      "Class: plastic, Count: 13\n",
-      "Class: biological, Count: 16\n",
-      "Class: battery, Count: 8\n",
-      "Class: shoes, Count: 10\n",
-      "Class: metal, Count: 3\n",
-      "Class: paper, Count: 15\n",
-      "Predicted class counts for test images containing paper:\n",
-      "Class: paper, Count: 134\n",
-      "Class: clothes, Count: 106\n",
-      "Class: glass, Count: 32\n",
-      "Class: cardboard, Count: 16\n",
-      "Class: plastic, Count: 15\n",
-      "Class: trash, Count: 11\n",
-      "Class: metal, Count: 9\n",
-      "Class: battery, Count: 5\n",
-      "Class: shoes, Count: 6\n",
-      "Class: biological, Count: 2\n",
-      "Predicted class counts for test images containing biological:\n",
-      "Class: cardboard, Count: 11\n",
-      "Class: clothes, Count: 13\n",
-      "Class: biological, Count: 120\n",
-      "Class: glass, Count: 29\n",
-      "Class: shoes, Count: 20\n",
-      "Class: plastic, Count: 3\n",
-      "Class: battery, Count: 1\n",
+      "Class: clothes, Count: 972\n",
+      "Class: paper, Count: 17\n",
+      "Class: plastic, Count: 12\n",
+      "Class: glass, Count: 27\n",
       "Class: trash, Count: 1\n",
-      "Class: paper, Count: 1\n",
-      "Class: metal, Count: 1\n",
-      "Predicted class counts for test images containing shoes:\n",
-      "Class: glass, Count: 67\n",
-      "Class: shoes, Count: 174\n",
-      "Class: metal, Count: 9\n",
-      "Class: clothes, Count: 74\n",
+      "Class: cardboard, Count: 15\n",
+      "Class: shoes, Count: 10\n",
+      "Class: metal, Count: 4\n",
+      "Class: biological, Count: 7\n",
+      "Class: battery, Count: 1\n",
+      "Predicted class counts for test images containing metal:\n",
+      "Class: clothes, Count: 54\n",
+      "Class: glass, Count: 39\n",
+      "Class: metal, Count: 47\n",
+      "Class: shoes, Count: 24\n",
+      "Class: biological, Count: 13\n",
+      "Class: plastic, Count: 9\n",
       "Class: cardboard, Count: 7\n",
-      "Class: battery, Count: 20\n",
-      "Class: trash, Count: 10\n",
-      "Class: biological, Count: 25\n",
-      "Class: plastic, Count: 7\n",
-      "Class: paper, Count: 3\n"
+      "Class: trash, Count: 2\n",
+      "Class: paper, Count: 6\n",
+      "Class: battery, Count: 3\n",
+      "Predicted class counts for test images containing plastic:\n",
+      "Class: plastic, Count: 137\n",
+      "Class: cardboard, Count: 25\n",
+      "Class: clothes, Count: 121\n",
+      "Class: trash, Count: 17\n",
+      "Class: battery, Count: 3\n",
+      "Class: glass, Count: 53\n",
+      "Class: paper, Count: 15\n",
+      "Class: shoes, Count: 14\n",
+      "Class: biological, Count: 9\n",
+      "Class: metal, Count: 3\n",
+      "Predicted class counts for test images containing cardboard:\n",
+      "Class: cardboard, Count: 192\n",
+      "Class: clothes, Count: 62\n",
+      "Class: glass, Count: 40\n",
+      "Class: shoes, Count: 13\n",
+      "Class: plastic, Count: 13\n",
+      "Class: biological, Count: 14\n",
+      "Class: battery, Count: 4\n",
+      "Class: trash, Count: 7\n",
+      "Class: paper, Count: 18\n",
+      "Class: metal, Count: 2\n",
+      "Predicted class counts for test images containing paper:\n",
+      "Class: biological, Count: 4\n",
+      "Class: clothes, Count: 108\n",
+      "Class: glass, Count: 35\n",
+      "Class: paper, Count: 136\n",
+      "Class: cardboard, Count: 9\n",
+      "Class: metal, Count: 10\n",
+      "Class: plastic, Count: 17\n",
+      "Class: trash, Count: 6\n",
+      "Class: battery, Count: 4\n",
+      "Class: shoes, Count: 7\n",
+      "Predicted class counts for test images containing biological:\n",
+      "Class: cardboard, Count: 7\n",
+      "Class: biological, Count: 126\n",
+      "Class: clothes, Count: 15\n",
+      "Class: glass, Count: 26\n",
+      "Class: plastic, Count: 1\n",
+      "Class: shoes, Count: 20\n",
+      "Class: battery, Count: 1\n",
+      "Class: trash, Count: 2\n",
+      "Class: metal, Count: 2\n",
+      "Predicted class counts for test images containing shoes:\n",
+      "Class: shoes, Count: 183\n",
+      "Class: glass, Count: 60\n",
+      "Class: clothes, Count: 75\n",
+      "Class: battery, Count: 17\n",
+      "Class: trash, Count: 8\n",
+      "Class: paper, Count: 8\n",
+      "Class: plastic, Count: 6\n",
+      "Class: biological, Count: 26\n",
+      "Class: cardboard, Count: 8\n",
+      "Class: metal, Count: 5\n"
      ]
     }
    ],
