--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +147,37 @@
     "    shininess = bright_pixels / total_pixels  # Proportion of bright pixels\n",
     "    return shininess\n",
     "\n",
+    "def calculate_surface_anisotropy(image):\n",
+    "    \"\"\"\n",
+    "    Calculate the anisotropy of the surface using Gabor filters.\n",
+    "    Measures how directional the texture is.\n",
+    "    \"\"\"\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # Parameters for Gabor filter\n",
+    "    num_orientations = 8  # Number of orientations to test\n",
+    "    kernel_size = 21      # Size of the Gabor filter kernel\n",
+    "    sigma = 5.0           # Standard deviation of the Gaussian function\n",
+    "    lambd = 10.0          # Wavelength of the sinusoidal component\n",
+    "    gamma = 0.5           # Spatial aspect ratio\n",
+    "    \n",
+    "    responses = []\n",
+    "    \n",
+    "    # Apply Gabor filters with different orientations\n",
+    "    for theta in np.linspace(0, np.pi, num_orientations, endpoint=False):\n",
+    "        gabor_kernel = cv2.getGaborKernel((kernel_size, kernel_size), sigma, theta, lambd, gamma, 0, ktype=cv2.CV_32F)\n",
+    "        filtered_image = cv2.filter2D(gray_image, cv2.CV_32F, gabor_kernel)\n",
+    "        responses.append(np.mean(filtered_image ** 2))  # Energy of the response\n",
+    "\n",
+    "    # Measure anisotropy: ratio of maximum response to mean response\n",
+    "    max_response = max(responses)\n",
+    "    mean_response = np.mean(responses)\n",
+    "    anisotropy = max_response / mean_response if mean_response > 0 else 0\n",
+    "\n",
+    "    return anisotropy\n",
+    "\n",
     "def get_features(image):\n",
-    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections, transparency, texture smoothness, shininess).\"\"\"\n",
+    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections, transparency, texture smoothness, shininess, surface anisotropy).\"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
     "    parallel_lines = calculate_parallel_lines(image)\n",
@@ -156,27 +185,32 @@
     "    reflection_amount = calculate_reflection(image)\n",
     "    transparency_amount = calculate_transparency(image)\n",
     "    texture_smoothness = calculate_texture_smoothness(image)\n",
-    "    shininess = calculate_shininess(image)  # Added shininess feature\n",
-    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness, shininess"
+    "    shininess = calculate_shininess(image)\n",
+    "    surface_anisotropy = calculate_surface_anisotropy(image)\n",
+    "\n",
+    "    return (yellow_amount, silver_amount, parallel_lines, cylinder_count, \n",
+    "            reflection_amount, transparency_amount, texture_smoothness, \n",
+    "            shininess, surface_anisotropy)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778))\n"
+      "Surface Anisotropy: (15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778), np.float32(2.768033))\n"
      ]
     }
    ],
    "source": [
-    "# Feature extraction testing\n",
+    "# Example usage with an image\n",
     "test_im = cv2.imread(path + \"/garbage-dataset/cardboard/cardboard_25.jpg\")\n",
-    "print(get_features(test_im))"
+    "anisotropy_feature = get_features(test_im)\n",
+    "print(\"Surface Anisotropy:\", anisotropy_feature)"
    ]
   },
   {
@@ -188,31 +222,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778))\n",
-      "Accuracy: 0.5825426944971537\n",
+      "(15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636), np.float64(0.8047277777777778), np.float32(2.768033))\n",
+      "Accuracy: 0.5989879822896901\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     battery       0.67      0.59      0.63       145\n",
+      "     battery       0.69      0.61      0.64       145\n",
       "  biological       0.52      0.63      0.57       138\n",
-      "   cardboard       0.66      0.56      0.61       311\n",
-      "     clothes       0.66      0.93      0.78       886\n",
-      "       glass       0.45      0.51      0.48       455\n",
-      "       metal       0.33      0.10      0.15       163\n",
-      "       paper       0.57      0.39      0.46       263\n",
-      "     plastic       0.53      0.33      0.41       327\n",
-      "       shoes       0.50      0.44      0.47       317\n",
-      "       trash       0.55      0.43      0.48       157\n",
+      "   cardboard       0.67      0.53      0.59       311\n",
+      "     clothes       0.68      0.93      0.78       886\n",
+      "       glass       0.48      0.55      0.51       455\n",
+      "       metal       0.46      0.16      0.24       163\n",
+      "       paper       0.62      0.43      0.51       263\n",
+      "     plastic       0.51      0.35      0.42       327\n",
+      "       shoes       0.53      0.46      0.49       317\n",
+      "       trash       0.56      0.47      0.51       157\n",
       "\n",
-      "    accuracy                           0.58      3162\n",
-      "   macro avg       0.54      0.49      0.50      3162\n",
-      "weighted avg       0.57      0.58      0.56      3162\n",
+      "    accuracy                           0.60      3162\n",
+      "   macro avg       0.57      0.51      0.53      3162\n",
+      "weighted avg       0.59      0.60      0.58      3162\n",
       "\n"
      ]
     }
@@ -250,11 +284,15 @@
     "        test_images.append(os.path.join(class_path, image_name))\n",
     "\n",
     "# Convert features and labels to a DataFrame\n",
-    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount', 'texture_smoothness', 'shininess'])\n",
+    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
+    "                                     'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
+    "                                     'shininess', 'surface_anisotropy'])\n",
     "df['label'] = labels\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
-    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount', 'texture_smoothness', 'shininess']]\n",
+    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
+    "        'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
+    "        'shininess', 'surface_anisotropy']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -283,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: glass\n"
+      "Predicted class: metal\n"
      ]
     }
    ],
@@ -302,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -310,113 +348,114 @@
      "output_type": "stream",
      "text": [
       "Predicted class counts for test images containing trash:\n",
-      "Class: metal, Count: 3\n",
-      "Class: trash, Count: 84\n",
-      "Class: clothes, Count: 21\n",
-      "Class: plastic, Count: 6\n",
+      "Class: glass, Count: 41\n",
+      "Class: trash, Count: 81\n",
+      "Class: paper, Count: 7\n",
+      "Class: cardboard, Count: 12\n",
+      "Class: plastic, Count: 9\n",
       "Class: shoes, Count: 12\n",
-      "Class: paper, Count: 6\n",
-      "Class: glass, Count: 38\n",
-      "Class: cardboard, Count: 13\n",
-      "Class: battery, Count: 2\n",
-      "Class: biological, Count: 5\n",
-      "Predicted class counts for test images containing glass:\n",
-      "Class: glass, Count: 303\n",
-      "Class: trash, Count: 19\n",
-      "Class: metal, Count: 10\n",
-      "Class: plastic, Count: 46\n",
-      "Class: shoes, Count: 64\n",
-      "Class: clothes, Count: 96\n",
-      "Class: battery, Count: 18\n",
-      "Class: cardboard, Count: 13\n",
-      "Class: biological, Count: 26\n",
-      "Class: paper, Count: 18\n",
-      "Predicted class counts for test images containing battery:\n",
-      "Class: shoes, Count: 28\n",
-      "Class: glass, Count: 35\n",
-      "Class: battery, Count: 109\n",
+      "Class: metal, Count: 4\n",
+      "Class: clothes, Count: 15\n",
+      "Class: battery, Count: 3\n",
       "Class: biological, Count: 6\n",
-      "Class: paper, Count: 1\n",
-      "Class: clothes, Count: 6\n",
+      "Predicted class counts for test images containing glass:\n",
+      "Class: glass, Count: 325\n",
+      "Class: metal, Count: 11\n",
+      "Class: plastic, Count: 41\n",
+      "Class: cardboard, Count: 19\n",
+      "Class: clothes, Count: 83\n",
+      "Class: shoes, Count: 62\n",
+      "Class: trash, Count: 14\n",
+      "Class: battery, Count: 15\n",
+      "Class: biological, Count: 24\n",
+      "Class: paper, Count: 19\n",
+      "Predicted class counts for test images containing battery:\n",
+      "Class: shoes, Count: 27\n",
+      "Class: glass, Count: 31\n",
+      "Class: battery, Count: 112\n",
+      "Class: biological, Count: 7\n",
+      "Class: trash, Count: 1\n",
+      "Class: paper, Count: 3\n",
       "Class: plastic, Count: 1\n",
+      "Class: clothes, Count: 4\n",
       "Class: cardboard, Count: 2\n",
       "Class: metal, Count: 1\n",
       "Predicted class counts for test images containing clothes:\n",
-      "Class: clothes, Count: 972\n",
-      "Class: paper, Count: 17\n",
-      "Class: plastic, Count: 12\n",
-      "Class: glass, Count: 27\n",
-      "Class: trash, Count: 1\n",
-      "Class: cardboard, Count: 15\n",
-      "Class: shoes, Count: 10\n",
-      "Class: metal, Count: 4\n",
-      "Class: biological, Count: 7\n",
+      "Class: clothes, Count: 990\n",
+      "Class: paper, Count: 16\n",
+      "Class: shoes, Count: 5\n",
+      "Class: plastic, Count: 11\n",
+      "Class: glass, Count: 18\n",
+      "Class: cardboard, Count: 10\n",
+      "Class: biological, Count: 9\n",
+      "Class: metal, Count: 6\n",
       "Class: battery, Count: 1\n",
       "Predicted class counts for test images containing metal:\n",
-      "Class: clothes, Count: 54\n",
-      "Class: glass, Count: 39\n",
-      "Class: metal, Count: 47\n",
-      "Class: shoes, Count: 24\n",
+      "Class: clothes, Count: 43\n",
+      "Class: glass, Count: 41\n",
+      "Class: battery, Count: 5\n",
+      "Class: metal, Count: 48\n",
+      "Class: shoes, Count: 27\n",
       "Class: biological, Count: 13\n",
-      "Class: plastic, Count: 9\n",
-      "Class: cardboard, Count: 7\n",
-      "Class: trash, Count: 2\n",
-      "Class: paper, Count: 6\n",
-      "Class: battery, Count: 3\n",
-      "Predicted class counts for test images containing plastic:\n",
-      "Class: plastic, Count: 137\n",
-      "Class: cardboard, Count: 25\n",
-      "Class: clothes, Count: 121\n",
-      "Class: trash, Count: 17\n",
-      "Class: battery, Count: 3\n",
-      "Class: glass, Count: 53\n",
-      "Class: paper, Count: 15\n",
-      "Class: shoes, Count: 14\n",
-      "Class: biological, Count: 9\n",
-      "Class: metal, Count: 3\n",
-      "Predicted class counts for test images containing cardboard:\n",
-      "Class: cardboard, Count: 192\n",
-      "Class: clothes, Count: 62\n",
-      "Class: glass, Count: 40\n",
-      "Class: shoes, Count: 13\n",
       "Class: plastic, Count: 13\n",
-      "Class: biological, Count: 14\n",
-      "Class: battery, Count: 4\n",
-      "Class: trash, Count: 7\n",
-      "Class: paper, Count: 18\n",
-      "Class: metal, Count: 2\n",
-      "Predicted class counts for test images containing paper:\n",
-      "Class: biological, Count: 4\n",
-      "Class: clothes, Count: 108\n",
-      "Class: glass, Count: 35\n",
-      "Class: paper, Count: 136\n",
-      "Class: cardboard, Count: 9\n",
-      "Class: metal, Count: 10\n",
-      "Class: plastic, Count: 17\n",
-      "Class: trash, Count: 6\n",
-      "Class: battery, Count: 4\n",
-      "Class: shoes, Count: 7\n",
-      "Predicted class counts for test images containing biological:\n",
-      "Class: cardboard, Count: 7\n",
-      "Class: biological, Count: 126\n",
-      "Class: clothes, Count: 15\n",
-      "Class: glass, Count: 26\n",
-      "Class: plastic, Count: 1\n",
-      "Class: shoes, Count: 20\n",
-      "Class: battery, Count: 1\n",
-      "Class: trash, Count: 2\n",
-      "Class: metal, Count: 2\n",
-      "Predicted class counts for test images containing shoes:\n",
-      "Class: shoes, Count: 183\n",
+      "Class: cardboard, Count: 4\n",
+      "Class: paper, Count: 7\n",
+      "Class: trash, Count: 3\n",
+      "Predicted class counts for test images containing plastic:\n",
+      "Class: plastic, Count: 142\n",
+      "Class: cardboard, Count: 23\n",
+      "Class: clothes, Count: 107\n",
+      "Class: paper, Count: 25\n",
+      "Class: trash, Count: 10\n",
+      "Class: shoes, Count: 14\n",
       "Class: glass, Count: 60\n",
-      "Class: clothes, Count: 75\n",
-      "Class: battery, Count: 17\n",
-      "Class: trash, Count: 8\n",
-      "Class: paper, Count: 8\n",
-      "Class: plastic, Count: 6\n",
-      "Class: biological, Count: 26\n",
+      "Class: battery, Count: 1\n",
+      "Class: metal, Count: 6\n",
+      "Class: biological, Count: 9\n",
+      "Predicted class counts for test images containing cardboard:\n",
+      "Class: cardboard, Count: 202\n",
+      "Class: shoes, Count: 15\n",
+      "Class: paper, Count: 19\n",
+      "Class: trash, Count: 9\n",
+      "Class: glass, Count: 25\n",
+      "Class: plastic, Count: 17\n",
+      "Class: biological, Count: 14\n",
+      "Class: clothes, Count: 59\n",
+      "Class: battery, Count: 4\n",
+      "Class: metal, Count: 1\n",
+      "Predicted class counts for test images containing paper:\n",
+      "Class: paper, Count: 161\n",
+      "Class: clothes, Count: 86\n",
+      "Class: glass, Count: 33\n",
+      "Class: metal, Count: 7\n",
+      "Class: cardboard, Count: 12\n",
+      "Class: plastic, Count: 18\n",
+      "Class: trash, Count: 6\n",
+      "Class: battery, Count: 3\n",
+      "Class: shoes, Count: 7\n",
+      "Class: biological, Count: 3\n",
+      "Predicted class counts for test images containing biological:\n",
       "Class: cardboard, Count: 8\n",
-      "Class: metal, Count: 5\n"
+      "Class: shoes, Count: 25\n",
+      "Class: clothes, Count: 12\n",
+      "Class: biological, Count: 122\n",
+      "Class: glass, Count: 23\n",
+      "Class: trash, Count: 2\n",
+      "Class: plastic, Count: 2\n",
+      "Class: paper, Count: 2\n",
+      "Class: metal, Count: 2\n",
+      "Class: battery, Count: 2\n",
+      "Predicted class counts for test images containing shoes:\n",
+      "Class: glass, Count: 67\n",
+      "Class: shoes, Count: 182\n",
+      "Class: clothes, Count: 68\n",
+      "Class: cardboard, Count: 7\n",
+      "Class: metal, Count: 7\n",
+      "Class: paper, Count: 6\n",
+      "Class: plastic, Count: 7\n",
+      "Class: biological, Count: 31\n",
+      "Class: trash, Count: 4\n",
+      "Class: battery, Count: 17\n"
      ]
     }
    ],
